--- a/public/nav/index.html
+++ b/public/nav/index.html
@@ -163,7 +163,7 @@
 </div>
 <h2 id="-友链">🔖 <em>友链</em></h2>
 <div class="bookmark">
-<p>友链申请: 发邮件至 <a href="mailto:akvicor@akvicor.com">akvicor@akvicor.com</a></p>
+<p>友链互换: 发邮件至 <a href="mailto:akvicor@akvicor.com">akvicor@akvicor.com</a></p>
 <ul>
 <li>折腾笔记 <a href="https://pbpz.net">https://pbpz.net</a></li>
 </ul>
